--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="index.js"></script>
+  <script src="scripts/index.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/indexSpec.js"></script>
