--- a/popup.html
+++ b/popup.html
@@ -7,11 +7,11 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
-    <link rel="stylesheet" href="static/css/popup.css">
+    <link rel="stylesheet" href="assets/css/popup.css">
     <script src="scripts/popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+    <h1>Film Comments</h1>
+    <h3>You are not logged in.</h3>
   </body>
 </html>
