--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,11 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/popup.css">
+    <!-- JavaScript -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="scripts/popup.js"></script>
   </head>
   <body>
